# psiphon-automation

./: .gitignore  CONTRIBUTE.md  CONTRIBUTORS.md  DESIGN.odt  INSTALL  README.md
EmailResponder/: 00-remote-logstash.conf  20-psiphon-logging.conf  50_scores.cf  README  README.md  aws_helpers.py  blacklist.py  client_tls_policy  conf_pull.py  copy_files.sh  create_cron_jobs.py  forward  get_instance_info.sh  header_checks  helo_access  install.sh  log_processor.py  logger.py  mail_direct.py  mail_process.py  mail_stats.py  main.cf.sample  master.cf.sample  poetry.toml  postfix_queue_check.pl  psiphon-log-processor.conf  psiphon-log-rotate.conf  pyproject.toml  s3_helpers.py  sender_access  sendmail.py  settings.py  update_code.sh
EmailResponder/FeedbackDecryptor/: FeedbackDecryptor.cron  FeedbackDecryptorCron  README.md  autoresponder.conf  autoresponder.py  autoresponder.service  config.py  cronjob.sh  datastore.py  datatransformer.py  decryptor.py  diagnostic-decryptor.py  email_validator.py  emailgetter.py  emailsender.py  feedbackdecryptor.conf  install.sh  locale_codes.json  logger.py  maildecryptor-runner.py  maildecryptor.conf  maildecryptor.py  maildecryptor_daemon.sh  maildecryptor_install.sh  maildecryptor_runner.py  mailformatter.py  mailparser.py  mailsender.conf  mailsender.py  mailsender.service  psi_ops_helpers.py  pyproject.toml  redactor.py  requirements.txt  s3decryptor.conf  s3decryptor.py  s3decryptor.service  s3decryptor_runner.py  sample_conf.json  sender.py  (+17 more)
EmailResponder/FeedbackDecryptor/responses/: am.html  ar.html  az.html  be.html  bn.html  (+42 more)
(+379 files in other folders)
