[tool.poetry]
name = "emailresponder"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.39"
boto3 = "^1.24.45"
mysqlclient = "^2.1.1"
dkimpy = "^1.0.5"
authres = "^1.2.0"
python-crontab = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
