[tool.poetry]
name = "feedbackdecryptor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.9"
jsonpickle = "^2.2.0"
pymongo = "^4.2.0"
boto3 = "^1.24.37"
numpy = "^1.23.1"
html2text = "^2020.1.16"
Mako = "^1.2.1"
pynliner = "^0.8.0"
beautifulsoup4 = "^4.11.1"
PyYAML = "^6.0"
cryptography = "^37.0.4"
requests = "^2.28.1"
dnspython = "^2.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
